--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -10,3 +10,29 @@
 .btn:hover {
     @apply border-2 border-inherit border-collapse border;
 } */
+
+.scrollbar-pars {
+    --sb-size: 6px;
+    --sb-track-color: #fff7ed ;
+    --sb-thumb-color: #ea580c;
+}
+  
+.scrollbar-pars::-webkit-scrollbar {
+    width: var(--sb-size);
+}
+
+.scrollbar-pars::-webkit-scrollbar-track {
+    background: var(--sb-track-color);
+    border-radius: 9;
+    /* border: 0; */
+    padding-right: 10px;
+}
+
+.scrollbar-pars::-webkit-scrollbar-thumb {
+background: var(--sb-thumb-color);
+border-bottom-right-radius: 9px;
+border-bottom-left-radius: 9px;
+/* border: 0; */
+padding-right: 10px;
+
+}
