Change color mode css

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -11,6 +11,30 @@
     @apply border-2 border-inherit border-collapse border;
 } */
 
+.select-color-mode{
+    @apply text-orange-400
+  }
+  
+  body {
+    background-color: #fff;
+    color: rgba(0,0,0,0.8);
+  }
+  
+  .dark body {
+    background-color: #091a28;
+    color: #ebf4f1;
+  
+    .select-color-mode{
+      @apply text-teal-600
+    }
+  }
+  
+  .sepia body {
+    background-color: #f1e7d0;
+    color: #433422;
+  }
+  
+
 .scrollbar-pars {
     --sb-size: 6px;
     --sb-track-color: #fff7ed ;
