Change color mode css body> dark

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -21,12 +21,7 @@
   }
   
   .dark body {
-    background-color: #091a28;
-    color: #ebf4f1;
-  
-    .select-color-mode{
-      @apply text-teal-600
-    }
+    @apply bg-gray-800 text-white;
   }
   
   .sepia body {
